--- a/_generate_plots/Paper B - Old implementation of Lazy Theta * vs new one.ipynb
+++ b/_generate_plots/Paper B - Old implementation of Lazy Theta * vs new one.ipynb
@@ -671,7 +671,23 @@
     "    1. `rosservice call /uav_1/mavros/cmd/takeoff \"{min_pitch: 0.0, yaw: 0.0, latitude: 0.0, longitude: 0.0, altitude: 5.0}\" `\n",
     "    1. `rosservice call /uav_1/mavros/cmd/arming \"value: true\"`\n",
     "    1. `rosservice call /uav_1/mavros/set_mode \"base_mode: 0 custom_mode: 'OFFBOARD'\"`\n",
-    "\n"
+    "\n",
+    "```\n",
+    "std::string ual_ns =  this->ns_prefix_ + std::to_string(this->robot_id_) + \"/ual\";     \n",
+    "std::string take_off_srv = ual_ns + \"/take_off\";       \n",
+    "std::string land_srv = ual_ns + \"/land\";\n",
+    "std::string go_to_waypoint_srv = ual_ns + \"/go_to_waypoint\";\n",
+    "std::string go_to_waypoint_geo_srv = ual_ns + \"/go_to_waypoint_geo\";\n",
+    "std::string set_velocity_srv = ual_ns + \"/set_velocity\";\n",
+    "std::string set_position_error_srv = ual_ns + \"/set_position_error\";\n",
+    "std::string recover_from_manual_srv = ual_ns + \"/recover_from_manual\";\n",
+    "std::string pose_topic = ual_ns + \"/pose\";\n",
+    "std::string velocity_topic = ual_ns + \"/velocity\";\n",
+    "\n",
+    "rosservice call /uav_1/ual/take_off \"height: 2.0 blocking: false\" \n",
+    "rosservice call /uav_1/ual/go_to_waypoint_srv \n",
+    "rosservice call /uav_1/ual/velocity_topic\n",
+    "```"
    ]
   },
   {
@@ -936,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
