--- a/_generate_plots/Paper B - Old implementation of Lazy Theta * vs new one.ipynb
+++ b/_generate_plots/Paper B - Old implementation of Lazy Theta * vs new one.ipynb
@@ -541,7 +541,7 @@
     "    1. Clone Firmware folder\n",
     "        1. Download git `git clone https://github.com/PX4/Firmware.git`\n",
     "        1. Change to tag `git checkout v1.7.0-rc4`\n",
-    "        1. In file Firmaware /Tools/sitl_gazebo/models/rotors_description/urdf/iris.xacro Add at line 149 \n",
+    "        1. [Deprecated] In file Firmaware /Tools/sitl_gazebo/models/rotors_description/urdf/iris.xacro Add at line 149 \n",
     "        ```\n",
     "        <xacro:include filename=\"/opt/ros/kinetic/share/velodyne_description/urdf/VLP-16.urdf.xacro\"/> \n",
     "  <VLP-16 parent=\"base_link\" name=\"velodyne\" topic=\"/velodyne_points\" hz=\"10\" samples=\"440\"> \n",
@@ -576,9 +576,9 @@
     "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
     "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
     "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
-    "    1. In Flying_Octomap_code/src/architecture/Tools:\n",
-    "        1. iris.xacro & iris_base.xacro should be moved to Firmware/Tools/sitl_gazebo/models/rotors_description\n",
-    "        1. posix_sitl_urdf.launch should be moved to Firmware/launch\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris_base.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/posix_sitl_urdf.launch /Firmware/launch/`\n",
     "    1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
     "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "    1. `roslaunch px4 posix_sitl_urdf.launch`\n",
