[jupyter] Adding instruction to change the vertical angle.

--- a/_generate_plots/Paper B - Old implementation of Lazy Theta * vs new one.ipynb
+++ b/_generate_plots/Paper B - Old implementation of Lazy Theta * vs new one.ipynb
@@ -499,9 +499,7 @@
    "metadata": {},
    "source": [
     "<a id='try5'></a>\n",
-    "** Try 5 - add velodyne to iris **\n",
-    "\n",
-    "WTFFFFFF!!!\n"
+    "** Try 5 - add velodyne to iris **\n"
    ]
   },
   {
@@ -581,6 +579,7 @@
     "    1. `cp /ros_ws/src/architecture/Tools/posix_sitl_urdf.launch /Firmware/launch/`\n",
     "    1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
     "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "    1. Change the vertuical angle of the rays in urdf `sed -i 's/_/_/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "    1. `roslaunch px4 posix_sitl_urdf.launch`\n",
     "1. New terminal with ros_ws\n",
     "    1. `xhost +`\n",
