--- a/_generate_plots/Paper A - Previous implementation vs new.ipynb
+++ b/_generate_plots/Paper A - Previous implementation vs new.ipynb
@@ -55,9 +55,9 @@
     "    3. Launch docker\n",
     "        1. `xhost +`\n",
     "        1. `docker run -it --privileged \\\n",
-    "        -v /home/mfaria/Flying_Octomap_code/src:/ros_ws/src:rw \\\n",
+    "        -v /home/administrador/Flying_Octomap_code/:/ros_ws/src:rw \\\n",
     "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
-    "        -e DISPLAY=:0 \\\n",
+    "        -e DISPLAY=$DISPLAY \\\n",
     "        --name=garuda_sitl_v2 garuda_sitl_v2 /bin/bash`\n",
     "        1. exit\n",
     "        1. `docker start garuda_sitl_v2`\n",
@@ -76,15 +76,26 @@
     "    1. `cd /ros_ws`\n",
     "    1. `source /ros_ws/devel/setup.bash`\n",
     "1. Launch octomap_server with dataset\n",
-    "    1. roslaunch launch_options 20180219_freiburg_showLazyThetaStarPaths.launch"
+    "    1. roslaunch launch_options 20180219_freiburg_showLazyThetaStarPaths.launch\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Try 2\n",
+    "\n",
+    "1. Do all of paper B try 5\n",
+    "2. Run the posix launch that has path on the name"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
