[jupyter] Paper names updates. Adding notes.

--- a/_generate_plots/Paper A - Communications relay.ipynb
+++ b/_generate_plots/Paper A - Communications relay.ipynb
@@ -4,18 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lazy Theta * pseudocode and its implementation\n",
-    "####### What were the challenges faced during the implementation and how were they overcome?\n",
-    "####### What were the design options in tradeoffs?\n",
-    "####### Use experimental data from EUROC demo stage 2\n",
-    "### Implementation challenges\n",
-    "### RAM memory implications"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Contents"
    ]
   },
@@ -55,7 +43,7 @@
     "    3. Launch docker\n",
     "        1. `xhost +`\n",
     "        1. `docker run -it --privileged \\\n",
-    "        -v /home/administrador/Flying_Octomap_code/:/ros_ws/src:rw \\\n",
+    "        -v /home/mfaria/Flying_Octomap_code/:/ros_ws/src:rw \\\n",
     "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
     "        -e DISPLAY=$DISPLAY \\\n",
     "        --name=garuda_sitl_v2 garuda_sitl_v2 /bin/bash`\n",
@@ -89,7 +77,8 @@
     "### Try 2\n",
     "\n",
     "1. Do all of paper B try 5\n",
-    "2. Run the posix launch that has path on the name"
+    "2. Run the posix launch that has path on the name\n",
+    "3. rostopic pub /chatter std_msgs/String \"data: 'go'\" "
    ]
   },
   {
