--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -29,7 +29,14 @@
     "- Implementation challenges\n",
     "\n",
     "[**Experiment**](#experiment)\n",
+    "- [Simulation environment](#Simulation_environment)\n",
+    "- [Steps](#Steps)\n",
+    "- [Dataset](#dataset)\n",
+    "- [What to measure](#What_to_measure)\n",
+    "- [Thinkpad](#thinkpad)\n",
     "- [Launching instructions](#LaunchingInstructions)\n",
+    "\n",
+    "[**Implementation details**](#Implementation)\n",
     "\n",
     "**Result analysis - Were there any improvements?**\n",
     "\n",
@@ -551,8 +558,8 @@
     "    3. Launch docker\n",
     "        1. `xhost +`\n",
     "        1. `docker run -it --privileged \\\n",
-    "        -v /home/administrador/Firmware:/Firmware:rw \\\n",
-    "        -v /home/administrador/Flying_Octomap_code:/ros_ws/src:rw \\\n",
+    "        -v /home/mfaria/Firmware:/Firmware:rw \\\n",
+    "        -v /home/mfaria/Flying_Octomap_code:/ros_ws/src:rw \\\n",
     "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
     "        -e DISPLAY=:0 \\\n",
     "        --name=garuda_sitl_v2 garuda_sitl_v2 /bin/bash`\n",
@@ -782,7 +789,12 @@
    "metadata": {},
    "source": [
     "- Lazy theta Star using unknwon cells\n",
-    "- Coverage calculation. Decide is an unknow cell is covered if it is unreachable. Decide the waypoint that needs to be visited to gather the information."
+    "- Coverage calculation. Decide is an unknow cell is covered if it is unreachable. Decide the waypoint that needs to be visited to gather the information.\n",
+    "- Explore the relationship between:\n",
+    "    - the size of the vehicle \n",
+    "    - the safety distance \n",
+    "    - resolution needed to find all available paths \n",
+    "    - number of line of sight checks needs to verify a path."
    ]
   },
   {
@@ -797,12 +809,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='Simulation_environment'></a>\n",
+    "### Simulation environment\n",
+    "- Marine environment to make it relatable to Oceans\n",
+    "- Make it large so we can experiment with communication failures (>= 200)\n",
+    "- Actinia size 82m x 78m x 35m\n",
+    "- Check if it is interesting putting all together: RAM occupied by octree + size of path found (+ communications) \n",
+    "\n",
+    "<a id='Steps'></a>\n",
     "### Steps\n",
     "1. Set volume of the testbead. No prior knowledge\n",
     "2. Just press go\n",
     "3. Feed data into pix4d\n",
     "4. Show map\n",
     "\n",
+    "<a id='dataset'></a>\n",
+    "### Dataset\n",
+    "- Bag\n",
+    "- Frontier selected\n",
+    "- Octomap build\n",
+    "\n",
+    "<a id='What_to_measure'></a>\n",
     "### What to measure\n",
     "- Coverage\n",
     "- Flight time needed in autonomous mode\n",
@@ -812,6 +839,47 @@
     "- Lazy Theta * iterations (old and new implementations)\n",
     "- Lazy Theta * computation time for each waypoint (old and new implementation)\n",
     "- RAM usage (old and new implementation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='thinkpad'></a>\n",
+    "### Thinkpad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### How often are frontier cells selected?\n",
+    "- Everytime the old one is reached? \n",
+    "```\n",
+    "@ gridBenchmark/frontier_node.copp\n",
+    "main()\n",
+    "{\n",
+    "  while(ros::ok())\n",
+    " {\n",
+    "    mapper::Voxel next_frontier_vector3 = findNextFrontier();\n",
+    "    // ROS_WARN_STREAM(\"[Frontier] Next frontier \" << next_frontier_vector3);\n",
+    "    frontier_pose.pose.position.x = next_frontier_vector3.x;\n",
+    "    frontier_pose.pose.position.y = next_frontier_vector3.y;\n",
+    "    frontier_pose.pose.position.z = next_frontier_vector3.z;\n",
+    "    local_pos_pub.publish(frontier_pose);\n",
+    "    // get_frontier_node = false;\n",
+    "    frontier_check_rate.sleep();\n",
+    "    ros::spinOnce();\n",
+    " }\n",
+    "}\n",
+    "```\n",
+    "--> This should be on demand\n",
+    "\n",
+    "##### Is node topic scope ok?\n",
+    "\n",
+    "##### Flying too close to the ground\n",
+    "\n",
+    "##### Need better simulation scenario, check how much ground is there.\n"
    ]
   },
   {
@@ -865,6 +933,24 @@
     "    ```\n",
     "1. Launch mavros node `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`\n",
     "1. In new terminal, launch offboard node `rosrun architecture px4_mavros_offboard_node`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Implementation'></a>\n",
+    "# Implementation details\n",
+    "Check from JINT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Heuristic to goal's voxel center or just goal?\n",
+    "\n",
+    "### Line of sight going through explored terrain?"
    ]
   },
   {
