--- a/_generate_plots/Paper C - Large structures test.ipynb
+++ b/_generate_plots/Paper C - Large structures test.ipynb
@@ -33,9 +33,12 @@
    "metadata": {},
    "source": [
     "# Paper questions\n",
+    "1. Where does Lazy Theta* break? Marine environments vs plants (Freiburg)\n",
     "1. Where do large structures break the naive choice of next frontier point to explore?\n",
     "\n",
     "2. Comparison of how other heuristics do for that choice\n",
+    "\n",
+    "2. Systematic heuristic (top-down; east-west; south-north)\n",
     "\n",
     "3. Comparison of the impact of update rate of the current goal (waiting until reaching the goal or updating with new information)\n",
     "\n",
