--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -703,6 +703,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='try9'></a>\n",
+    "##### Try 9 - ETHz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is after the winter school. Modifications found at ETHz.\n",
+    "\n",
+    "Use the Velodyne sim. Output PointCloud2. (? not sure, Riccardo did this)\n",
+    "\n",
+    "1. Docker\n",
+    "    1. Clone Firmware folder\n",
+    "        1. Download git `git clone https://github.com/PX4/Firmware.git`\n",
+    "        1. Change to tag `git checkout v1.7.0-rc4`\n",
+    "    2. Build docker image\n",
+    "        1. Built with  `docker build -t garuda_sitl_v2 .` while at _docker folder\n",
+    "    3. Launch docker\n",
+    "        1. `xhost +`\n",
+    "        1. `docker run -it --privileged \\\n",
+    "        -v /home/mfaria/Firmware:/Firmware:rw \\\n",
+    "        -v /home/mfaria/Flying_Octomap_code:/ros_ws/src:rw \\\n",
+    "        -v /tmp/.X11-unix:/tmp/.X11-unix:ro \\\n",
+    "        -e DISPLAY=:0 \\\n",
+    "        --name=garuda_sitl_v2 garuda_sitl_v2 /bin/bash`\n",
+    "        1. exit\n",
+    "        1. `docker start garuda_sitl_v2`\n",
+    "        1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
+    "1. Build ros workspace\n",
+    "    1. (First time) Make ros workspace:\n",
+    "        1. `source /opt/ros/kinetic/setup.bash`\n",
+    "        1. `cd /ros_ws`\n",
+    "        2. `catkin init`\n",
+    "    1. Get catkin simple\n",
+    "        1. `git clone https://github.com/catkin/catkin_simple.git`\n",
+    "    1. `catkin build` \n",
+    "    1. `catkin build` (compile twice so it compiles catkin simple)\n",
+    "1. Build following [px4](https://dev.px4.io/en/simulation/ros_interface.html) instructions - keep terminal\n",
+    "    1. `cd /Firmware`\n",
+    "    1. `make posix_sitl_default gazebo`\n",
+    "    1. Kill process (this was just for the make part, they apperantly complicated the toolchain at px4)\n",
+    "    1. `source /ros_ws/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris_base.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/posix_sitl_urdf.launch /Firmware/launch/`\n",
+    "    1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "    1. Change the vertical angle of the rays in urdf `sed -i 's/_/_/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "    1. `roslaunch px4 posix_sitl_urdf.launch`\n",
+    "1. New terminal with ros_ws\n",
+    "    1. `xhost +`\n",
+    "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
+    "    1. `cd /Firmware`\n",
+    "    1. `source /ros_ws/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "1. New terminal just Firmware\n",
+    "    1. `xhost +`\n",
+    "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
+    "    1. `cd /Firmware`\n",
+    "    1. `source /opt/ros/kinetic/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "1. Launch mavros node `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`\n",
+    "    \n",
+    "\n",
+    "\n",
+    "The rqt error is harmless so far. But in case it gets relevent [here is how to fix it](\n",
+    "https://github.com/activatedgeek/docker-videostack/issues/1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "**EUROC setup but with gazebo:**\n",
     "- Vicon\n",
