[jupyter] Updating the instructions to reflect the failing of running Geo script on docker build. Documenting nvidia nightmare.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "**Development Environment**\n",
     "- [Method](#method)\n",
+    "- [Nvidia](#nvidia)\n",
     "- [Docker](#dockerFile)\n",
     "- [Gazebo simulation](#gazebo)\n",
     "    - [Try 4 -  octomap camera](#try4)\n",
@@ -23,6 +24,7 @@
     "    - [Try 6 -  older px4 sitl from 2015](#try6)\n",
     "    - [Try 7 -  hector quadrotor](#try7)\n",
     "    - [Try 8 -  grvc + px4](#try8)\n",
+    "    - [Try 9 -  try5 ETHz onwards](#try9)\n",
     "    \n",
     "**Software**\n",
     "- [Architecture](#architecture)\n",
@@ -133,6 +135,35 @@
     "1. Unit testing. Assert code stability. Record api usage. Record development focus.\n",
     "1. Gazebo. More plugins for sensors.\n",
     "1. Match the simulated architecture with the UAV architecture as closely as possible (example Real-time visual-inertial mapping, re-localization and planning onboard MAVs in unknown environments p4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Nvidia'></a>\n",
+    "### Nvidia "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The nvidia GPU drivers make a mess with docker. The best option is to just brun the whole thing with fire.\n",
+    "\n",
+    "To do so follow [this guy](https://askubuntu.com/questions/206283/how-can-i-uninstall-a-nvidia-driver-completely)\n",
+    "\n",
+    "Blacklisting does not work (or boot)\n",
+    "\n",
+    "To check what is being used when nvidia is installed between the intel and nvidia: `prime-select query`\n",
+    "\n",
+    "When the installation is correct the command is no longer recognized.\n",
+    "\n",
+    "But if you by some reason need to alternate among the two it's `prime-select nvidia|intel`\n",
+    "    \n",
+    "The open source driver made the omen laptop stop working at all for two times. Seemingly at random.\n",
+    "\n",
+    "Without GPU there are no additional monitors."
    ]
   },
   {
@@ -714,13 +745,18 @@
     "This is after the winter school. Modifications found at ETHz.\n",
     "\n",
     "Use the Velodyne sim. Output PointCloud2. (? not sure, Riccardo did this)\n",
-    "\n",
-    "1. Docker\n",
+    "1. Clone repos\n",
+    "    1. Clone FlyingOctomap folder\n",
+    "        1. `git clone https://github.com/margaridaCF/FlyingOctomap_code.git`\n",
+    "        1. `git checkout ____`\n",
+    "        1. `mv FlyingOctomap_code Flying_Octomap_code`\n",
     "    1. Clone Firmware folder\n",
-    "        1. Download git `git clone https://github.com/PX4/Firmware.git`\n",
-    "        1. Change to tag `git checkout v1.7.0-rc4`\n",
+    "        1. `git clone https://github.com/PX4/Firmware.git`\n",
+    "        1. `git checkout v1.7.0-rc4`\n",
+    "1. Docker\n",
     "    2. Build docker image\n",
-    "        1. Built with  `docker build -t garuda_sitl_v2 .` while at _docker folder\n",
+    "        1. `cd /home/mfaria/Flying_Octomap_code/_docker`\n",
+    "        1. `docker build -t garuda_sitl_v2 .` \n",
     "    3. Launch docker\n",
     "        1. `xhost +`\n",
     "        1. `docker run -it --privileged \\\n",
@@ -734,15 +770,18 @@
     "        1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
     "1. Build ros workspace\n",
     "    1. (First time) Make ros workspace:\n",
+    "        1. `cd /Firmware`\n",
     "        1. `source /opt/ros/kinetic/setup.bash`\n",
     "        1. `cd /ros_ws`\n",
     "        2. `catkin init`\n",
-    "    1. Get catkin simple\n",
-    "        1. `git clone https://github.com/catkin/catkin_simple.git`\n",
     "    1. `catkin build` \n",
+    "    1. `source /ros_ws/devel/setup.bash`\n",
     "    1. `catkin build` (compile twice so it compiles catkin simple)\n",
     "1. Build following [px4](https://dev.px4.io/en/simulation/ros_interface.html) instructions - keep terminal\n",
     "    1. `cd /Firmware`\n",
+    "    1. `wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh`\n",
+    "    1. `chmod +x install_geographiclib_datasets.sh`\n",
+    "    1. `./install_geographiclib_datasets.sh `\n",
     "    1. `make posix_sitl_default gazebo`\n",
     "    1. Kill process (this was just for the make part, they apperantly complicated the toolchain at px4)\n",
     "    1. `source /ros_ws/devel/setup.bash`\n",
@@ -755,7 +794,13 @@
     "    1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
     "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
     "    1. Change the vertical angle of the rays in urdf `sed -i 's/_/_/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
-    "    1. `roslaunch px4 posix_sitl_urdf.launch`\n",
+    "    1. `roslaunch px4 posix_sitl_urdf.launch`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. New terminal with ros_ws\n",
     "    1. `xhost +`\n",
     "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
