[jupyter] Fixing nvidia link

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "**Development Environment**\n",
     "- [Method](#method)\n",
-    "- [Nvidia](#nvidia)\n",
+    "- [Nvidia](#Nvidia)\n",
     "- [Docker](#dockerFile)\n",
     "- [Gazebo simulation](#gazebo)\n",
     "    - [Try 4 -  octomap camera](#try4)\n",
