--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The nvidia GPU drivers make a mess with docker. The best option is to just brun the whole thing with fire.\n",
+    "The nvidia GPU drivers make a mess with docker. The best option is to just burn the whole thing with fire.\n",
     "\n",
     "To do so follow [this guy](https://askubuntu.com/questions/206283/how-can-i-uninstall-a-nvidia-driver-completely)\n",
     "\n",
@@ -753,6 +753,7 @@
     "        1. `mv FlyingOctomap_code Flying_Octomap_code`\n",
     "    1. Clone Firmware folder\n",
     "        1. `git clone https://github.com/PX4/Firmware.git`\n",
+    "        1. `cd Firmware/`\n",
     "        1. `git checkout v1.7.0-rc4`\n",
     "1. Docker\n",
     "    2. Build docker image\n",
