[jupyter] Adding px4 info about parameters.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -29,6 +29,7 @@
     "**Software**\n",
     "- [Architecture](#architecture)\n",
     "- [Ros Mysteries](#rosMysteries)\n",
+    "- [MavRos](#mavros)\n",
     "- Implementation challenges\n",
     "\n",
     "[**Experiment**](#experiment)\n",
@@ -912,7 +913,25 @@
     "- [ROS wiki](http://wiki.ros.org/mavros) \n",
     "`roslaunch mavros px4.launch`\n",
     "- [Off board example](https://dev.px4.io/en/ros/mavros_offboard.html)\n",
-    "- mavlink_adapter "
+    "- mavlink_adapter \n",
+    "\n",
+    "##### Keeping the OffBoard mode:\n",
+    "[From px4](https://github.com/hamishwillee/px4_user_guide/blob/af0381dcdea989b6679200fe7a1b7c70468b82e5/en/flight_modes/offboard.md): Keep sending SET_POSITION_TARGET_LOCAL_NED messages\n",
+    "\n",
+    "[From mavros](https://github.com/mavlink/mavros/search?utf8=%E2%9C%93&q=SET_POSITION_TARGET_LOCAL_NED&type=): This message is a PositionTarget.msg. set_position_target_local_ned() posts to topic local, which is consistent to what the [Off board example](https://dev.px4.io/en/ros/mavros_offboard.html) says.\n",
+    "\n",
+    "##### Query param value\n",
+    "```\n",
+    "MPC_XY_VEL_MAX\n",
+    "param show MPC_XY_CRUISE\n",
+    "    Symbols: x = used, + = saved, * = unsaved\n",
+    "    x + MPC_XY_CRUISE [292,580] : 7.0000\n",
+    "     1055 parameters total, 654 used.\n",
+    "rosservice call /mavros/param/set \"param_id: 'MPC_XY_CRUISE'\n",
+    "    value:\n",
+    "      integer: 0\n",
+    "      real: 7.0\" \n",
+    "```"
    ]
   },
   {
