[jupyter] Why the current position service.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -877,6 +877,13 @@
     "- [Hokuyo 3d](http://wiki.ros.org/hokuyo3d) PointCloud2 messages. Experimental. \n",
     "- For simulation use a Velodyne with 270º visibility.\n",
     "\n",
+    "Nodelets:\n",
+    "- Keep single queue for callbacks and spins\n",
+    "- Avoid serialization associated with sockets\n",
+    "\n",
+    "Comms options:\n",
+    "- Making a node w/ a service to keep up with current position because the update rate is 100Hz... Probably benefits from nodelets. The frequency is still pretty high but it's the publisher who controls this. If it becomes an issue [topic_tools/throttle](http://wiki.ros.org/topic_tools/throttle) is an option\n",
+    "\n",
     "![Architecture.svg](attachment:Architecture.svg)\n",
     "\n",
     "![State%20Machine.svg](attachment:State%20Machine.svg)\n"
@@ -932,6 +939,21 @@
     "      integer: 0\n",
     "      real: 7.0\" \n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='px4'></a>\n",
+    "### px4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Opting out of px4 and mavros internal states as they are poorly documented. Especially in the case of Offboard mode. Instead arrival at waypoint will be checked with position. If trajectory generation is later implemented it will be controlled by time."
    ]
   },
   {
