--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -874,6 +874,9 @@
     "Comms options:\n",
     "- Making a node w/ a service to keep up with current position because the update rate is 100Hz... Probably benefits from nodelets. The frequency is still pretty high but it's the publisher who controls this. If it becomes an issue [topic_tools/throttle](http://wiki.ros.org/topic_tools/throttle) is an option\n",
     "\n",
+    "State Machine:\n",
+    "- Needed to intruduce a take of to higher ground to be inside the safety geofence (1m above the ground).\n",
+    "\n",
     "![Architecture.svg](attachment:Architecture.svg)\n",
     "\n",
     "![State%20Machine.svg](attachment:State%20Machine.svg)\n"
