[jupyter] Insight on geofencing for ground safety.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -877,6 +877,9 @@
     "State Machine:\n",
     "- Needed to intruduce a take of to higher ground to be inside the safety geofence (1m above the ground).\n",
     "\n",
+    "Geofencing safety:\n",
+    "- The very last safety check is done at the mav_comms node but it should be enforced each time a potential waypoint is generated. --> Cannot to this because in the real world the terrain may have negetive positions.\n",
+    "\n",
     "![Architecture.svg](attachment:Architecture.svg)\n",
     "\n",
     "![State%20Machine.svg](attachment:State%20Machine.svg)\n"
