[jupyter] Test info.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -30,7 +30,7 @@
     "- [Architecture](#architecture)\n",
     "- [Ros Mysteries](#rosMysteries)\n",
     "- [MavRos](#mavros)\n",
-    "- Implementation challenges\n",
+    "- [How to test](#testing)\n",
     "\n",
     "[**Experiment**](#experiment)\n",
     "- [Simulation environment](#Simulation_environment)\n",
@@ -934,22 +934,28 @@
     "    value:\n",
     "      integer: 0\n",
     "      real: 7.0\" \n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "<a id='px4'></a>\n",
-    "### px4"
+    "###### px4\n",
+    "- Opting out of px4 and mavros internal states as they are poorly documented. Especially in the case of Offboard mode. Instead arrival at waypoint will be checked with position. If trajectory generation is later implemented it will be controlled by time."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Opting out of px4 and mavros internal states as they are poorly documented. Especially in the case of Offboard mode. Instead arrival at waypoint will be checked with position. If trajectory generation is later implemented it will be controlled by time."
+    "<a id='testing'></a>\n",
+    "### How to test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. On an empty world make a geofence of min (-5, -5, 1) and max (5, 5, 10) and wait until all is explored.\n",
+    "2. On a world with a box (3m tall) make a geofence of min (-5, -5, 1) and max (5, 5, 10) and wait until all is explored.\n",
+    "3. On actinia world make a geofence of min (, , 1) and max (, , ) and wait until all is explored."
    ]
   },
   {
