--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -40,6 +40,8 @@
     "- [Thinkpad](#thinkpad)\n",
     "- [Launching instructions](#LaunchingInstructions)\n",
     "\n",
+    "[**Data analysis**](#data_analysis)\n",
+    "\n",
     "[**Implementation details**](#Implementation)\n",
     "\n",
     "**Result analysis - Were there any improvements?**\n",
@@ -839,7 +841,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Software\n",
+    "<a id='software'></a>\n",
+    "# Software"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='architecture'></a>\n",
     "### Architecture (ROS)"
    ]
@@ -873,12 +889,17 @@
     "\n",
     "Comms options:\n",
     "- Making a node w/ a service to keep up with current position because the update rate is 100Hz... Probably benefits from nodelets. The frequency is still pretty high but it's the publisher who controls this. If it becomes an issue [topic_tools/throttle](http://wiki.ros.org/topic_tools/throttle) is an option\n",
+    "- The rate of gazebo topics is set on the world file. I  the manual physics part. (ask Helen)\n",
+    "- Drop packages (code on the node) based on the timestamp (wait x amount of time) or the sequence number (only analyze multiples of 100)\n",
     "\n",
     "State Machine:\n",
     "- Needed to intruduce a take of to higher ground to be inside the safety geofence (1m above the ground).\n",
     "\n",
     "Geofencing safety:\n",
-    "- The very last safety check is done at the mav_comms node but it should be enforced each time a potential waypoint is generated. --> Cannot to this because in the real world the terrain may have negetive positions.\n",
+    "- The very last safety check is done at the mav_comms node but it should be enforced each time a potential waypoint is generated. --> Cannot to this because in the real world the terrain may have negative positions.\n",
+    "\n",
+    "Looping nodes:\n",
+    "- Keep a blacklist of unobservable frontiers. Keep it on the frontier node to avoid comms overhead.\n",
     "\n",
     "![Architecture.svg](attachment:Architecture.svg)\n",
     "\n",
@@ -1026,6 +1047,7 @@
     "### Dataset\n",
     "- Bag\n",
     "- Frontier selected\n",
+    "- Waypoints of each trajectory\n",
     "- Octomap build\n",
     "\n",
     "<a id='What_to_measure'></a>\n",
@@ -1033,11 +1055,33 @@
     "- Coverage\n",
     "- Flight time needed in autonomous mode\n",
     "- Flight time and planning time needed in Pix4D\n",
-    "- Flight time needed in old implementation\n",
     "- Resolution\n",
-    "- Lazy Theta * iterations (old and new implementations)\n",
-    "- Lazy Theta * computation time for each waypoint (old and new implementation)\n",
-    "- RAM usage (old and new implementation)"
+    "- Lazy Theta * iterations\n",
+    "- Lazy Theta * computation time for each waypoint\n",
+    "- RAM usage\n",
+    "- Exploration time\n",
+    "- Path lenght\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='data_analysis'></a>\n",
+    "# Data analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each approach run 20 to 50 times.\n",
+    "[Boxplot](https://plot.ly/python/box-plots/)\n",
+    "\n",
+    "1. Explored volume vs. time (linear plot)\n",
+    "1. Explored volume vs. distance (linear plot)\n",
+    "1. Exploration time. Boxplot\n",
+    "1. Computation time of the different parts and overall. Boxplot\n"
    ]
   },
   {
