--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -27,6 +27,7 @@
     "    - [Try 9 -  try5 ETHz onwards](#try9)\n",
     "    \n",
     "**Software**\n",
+    "- [Implementation Particularities](#implementation_particularities)\n",
     "- [Architecture](#architecture)\n",
     "- [Ros Mysteries](#rosMysteries)\n",
     "- [MavRos](#mavros)\n",
@@ -846,11 +847,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a id='implementation_particularities'></a>\n",
+    "### Implementation particularities\n",
+    "\n",
+    "##### State Machine:\n",
+    "- Needed to intruduce a take of to higher ground to be inside the safety geofence (1m above the ground).\n",
+    "\n",
+    "##### Geofencing safety:\n",
+    "- The very last safety check is done at the mav_comms node but it should be enforced each time a potential waypoint is generated. --> Cannot to this because in the real world the terrain may have negative positions.\n",
+    "\n",
+    "##### Looping nodes:\n",
+    "- Keep a blacklist of unobservable frontiers. Keep it on the frontier node to avoid comms overhead.\n",
+    "- The loop between frontiers was because of unknown neighbors that were not observable. The immediate problem was solved by only looking for neighbors in positions that are reachable by the sensor (the xy plane). \n",
+    "- The existing initialization maneuver is not sufficient to create voxels along all the desired z axis. (will be solved in another branch)\n",
+    "\n",
+    "##### Single waypoint results\n",
+    "- happened when the start and the goal are in the same voxel. To avoid this situation, it is now part of the operational requirements that this is not an admissible frontier (if UAV is already at the voxel and cannot observe the frontier there is no point staying here)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -892,14 +908,8 @@
     "- The rate of gazebo topics is set on the world file. I  the manual physics part. (ask Helen)\n",
     "- Drop packages (code on the node) based on the timestamp (wait x amount of time) or the sequence number (only analyze multiples of 100)\n",
     "\n",
-    "State Machine:\n",
-    "- Needed to intruduce a take of to higher ground to be inside the safety geofence (1m above the ground).\n",
     "\n",
-    "Geofencing safety:\n",
-    "- The very last safety check is done at the mav_comms node but it should be enforced each time a potential waypoint is generated. --> Cannot to this because in the real world the terrain may have negative positions.\n",
     "\n",
-    "Looping nodes:\n",
-    "- Keep a blacklist of unobservable frontiers. Keep it on the frontier node to avoid comms overhead.\n",
     "\n",
     "![Architecture.svg](attachment:Architecture.svg)\n",
     "\n",
