[jupyter] Writting down the steps to add really free space.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -981,8 +981,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Free Space**\n",
     "\n",
-    "- How to mark free space as free when there are no obstacles to make the return value within range? [ROS Answers question](https://answers.ros.org/question/287390/integrate-free-space-into-octomap/)"
+    "How to mark free space as free when there are no obstacles to make the return value within range? [ROS Answers question](https://answers.ros.org/question/287390/integrate-free-space-into-octomap/)\n",
+    "\n",
+    "The existing ocotomap_server only inserts free space associated to the occupied points. To add also the free space associated with areas with no obstacles:\n",
+    "1. Have a sensor that inputs LaserScans, PointClouds2 does not have this information anymore - [model & plugin tutorial](http://moorerobots.com/blog/post/2)\n",
+    "2. Go through each of the ranges and pick up the free ones (either it is infinity or not defined, something)\n",
+    "3. Add each point to a PointCloud2 (beware of frames and transformations)\n",
+    "4. Change the octomap_server insert these scans as purely free space (like the occupied but no end point)"
    ]
   },
   {
