[jupyter] Insigth into check corridor for obstacles.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1028,9 +1028,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Check area with a bounding boz for security area\n",
+    "- Check area with a bounding boz for security area --> cannot skew the bounding box :(\n",
     "- Use cast rays with lower resolution. Might have some correlation issues with cell id\n",
-    "- Think of octomap as Voronoi Map. Always using a resolution that guarantees safety."
+    "- Think of octomap as Voronoi Map. Always using a resolution that guarantees safety. --> in path generation the corridor the quad flies through also needs to be checked."
    ]
   },
   {
