[jupyter] Write down testing aspects.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1013,6 +1013,12 @@
    "source": [
     "1. On an empty world make a geofence of min (-5, -5, 1) and max (5, 5, 10) and wait until all is explored.\n",
     "2. On a world with a box (3m tall) make a geofence of min (-5, -5, 1) and max (5, 5, 10) and wait until all is explored.\n",
+    "1. On the world force_waypoint_sequence.world (two large block & a cilynder, geofence (-15, -20, 1) - (12, 20, 4):\n",
+    "    1. All the known voxels checked for a frontier are inside the safety margin wire box.\n",
+    "    1. The quad stays within the safety margin wire box at all times (except when arriving and leaving).\n",
+    "    1. The current position (light blue) is the same as the starting point (yellow).\n",
+    "    1. When all is explored and task finished, check the free voxels published by the octomap_server cover all reachable places within maneuver geofence.\n",
+    "\n",
     "3. On actinia world make a geofence of min (, , 1) and max (, , ) and wait until all is explored."
    ]
   },
