[jupyter] Command utility.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -810,6 +810,7 @@
    "metadata": {},
    "source": [
     "1. New terminal with ros_ws\n",
+    "    1. `docker start garuda_sitl_v2`\n",
     "    1. `xhost +`\n",
     "    1. `docker exec -u 0 -it garuda_sitl_v2 bash`\n",
     "    1. `cd /Firmware`\n",
