[jupyter] Graphs notes. Implementation details.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1133,7 +1133,13 @@
     "1. Explored volume vs. time (linear plot)\n",
     "1. Explored volume vs. distance (linear plot)\n",
     "1. Exploration time. Boxplot\n",
-    "1. Computation time of the different parts and overall. Boxplot\n"
+    "1. Computation time of the different parts and overall. Boxplot\n",
+    "\n",
+    "From \"History-aware Autonomous Exploration in Confined Environments using MAVs.\"\n",
+    "- Exploration time\n",
+    "- Max computation time\n",
+    "- Volume covered vs time\n",
+    "- Volume covered vs distance\n"
    ]
   },
   {
@@ -1174,7 +1180,14 @@
     "\n",
     "##### Flying too close to the ground\n",
     "\n",
-    "##### Need better simulation scenario, check how much ground is there.\n"
+    "##### Need better simulation scenario, check how much ground is there.\n",
+    "\n",
+    "##### Octomap cell size vs quad size\n",
+    "This particular application can work with coarse maps ==> minimum cell size can be equal or even bigger than quad size. Which usually is not the case for rooms, labs and smaller scale applications.\n",
+    "\n",
+    "##### Fast exploration due to flight endurance can be overcome with battery switching\n",
+    "\n",
+    "##### Put scale into maps!\n"
    ]
   },
   {
@@ -1182,7 +1195,7 @@
    "metadata": {},
    "source": [
     "<a id='LaunchingInstructions'></a>\n",
-    "### Launching Instructions"
+    "### Launching Instructions - outdated"
    ]
   },
   {
