[plotly] Box plot for frontier computation time on one run.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1127,6 +1127,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Run plotly\n",
+    "1. Installation\n",
+    "    1. `pip install plotly`\n",
+    "    1. `pip install cufflinks`\n",
+    "1. Run frontier extraction for box plots\n",
+    "    1. `cd ~/Flying_Octomap_code/_generate_plots`\n",
+    "    1. `python`\n",
+    "    1. `variables= {}`\n",
+    "    1. `execfile( \"compare_box_graphs.py\", variables )`\n",
+    "\n",
     "Each approach run 20 to 50 times.\n",
     "[Boxplot](https://plot.ly/python/box-plots/)\n",
     "\n",
