Intermediate commit - does not compile.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -76,7 +76,8 @@
     "The final tests must prove it works on the target scale (oilrigs). This will be done through scaling the bootleneck points (distances, memory, sensor resolution). [study here](Paper C - Large structures test.ipynb#scaling) and  [calculation sheet](https://docs.google.com/spreadsheets/d/1UFneS__9-L0viD8dhHrdOTUGh9j_4SgYT0UNm2cHwcY/edit?usp=sharing)\n",
     "\n",
     "Obstacle avoidance online.\n",
-    "\n"
+    "\n",
+    "It would be nice to do a table of the available experiments defining a features like \"A Multirobot System for Distributed Area Coverage and Signal Searching in Large Outdoor Scenarios\" table 1"
    ]
   },
   {
