--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -831,6 +831,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. To test specific octrees and see results visually (in separate terminals, setup as any other new terminal):\n",
+    "    1. `roslaunch architecture debug_lazyThetaStar.launch`\n",
+    "    1. `rosrun octomap_server octomap_server_node src/path_planning/test/data/d.bt _publish_free_space:=true`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "**EUROC setup but with gazebo:**\n",
     "- Vicon\n",
