[tests] Intructions to setup UAV.

--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -1129,6 +1129,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='hardware_setup'></a>\n",
+    "### Hardware setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Check installed ubuntu version\n",
+    "    1. `lsb_release -a`\n",
+    "1. Install software\n",
+    "    1. `sudo apt-get update `\n",
+    "    1. `ssh-keygen -t rsa -b 4096 -C \"margaridaCostaFaria@gmail.com\"`\n",
+    "    1. `cat ~/.ssh/id_rsa.pub`\n",
+    "    1. Add to github\n",
+    "\t1. `sudo sh -c 'echo \"deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main\" > /etc/apt/sources.list.d/ros-latest.list'`\n",
+    "\t1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
+    "\t1. `wget http://packages.ros.org/ros.key -O - | sudo apt-key add - `\n",
+    "\t1. `sudo apt-get update `\n",
+    "\t1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git`\n",
+    "\t1. `sudo mkdir /Firmware `\n",
+    "\t1. `cd /Firmware`\n",
+    "\t1. `sudo wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh `\n",
+    "\t1. `sudo chmod +x install_geographiclib_datasets.sh `\n",
+    "\t1. `sudo  ./install_geographiclib_datasets.sh `\n",
+    "1. Clone repos\n",
+    "    1. Clone FlyingOctomap folder\n",
+    "        1. `git clone https://github.com/margaridaCF/FlyingOctomap_code.git`\n",
+    "        1. `git checkout ____`\n",
+    "        1. `sudo mv FlyingOctomap_code Flying_Octomap_code`\n",
+    "        1. `cd Flying_Octomap_code`\n",
+    "        1. `git clone git@github.com:margaridaCF/laser_to_free_points_cloud.git`\n",
+    "        1. `cd laser_to_free_points_cloud/`\n",
+    "        1. `sudo git checkout free_cloud `\n",
+    "    1. Clone Firmware folder\n",
+    "        1. `sudo git clone https://github.com/PX4/Firmware.git`\n",
+    "        1. `cd Firmware/`\n",
+    "        1. `git checkout v1.7.0-rc4`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='data_analysis'></a>\n",
     "# Data analysis"
    ]
