--- a/_generate_plots/Paper B - SITL.ipynb
+++ b/_generate_plots/Paper B - SITL.ipynb
@@ -753,7 +753,7 @@
     "Use the Velodyne sim. Output PointCloud2. (? not sure, Riccardo did this)\n",
     "1. Clone repos\n",
     "    1. Clone FlyingOctomap folder\n",
-    "        1. `git clone https://github.com/margaridaCF/FlyingOctomap_code.git`\n",
+    "        1. `git clone git@github.com:margaridaCF/FlyingOctomap_code.git`\n",
     "        1. `git checkout ____`\n",
     "        1. `mv FlyingOctomap_code Flying_Octomap_code`\n",
     "        1. `cd Flying_Octomap_code`\n",
@@ -1144,16 +1144,27 @@
     "    1. `ssh-keygen -t rsa -b 4096 -C \"margaridaCostaFaria@gmail.com\"`\n",
     "    1. `cat ~/.ssh/id_rsa.pub`\n",
     "    1. Add to github\n",
+    "    1. `sudo sh -c 'echo \"deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main\" > /etc/apt/sources.list.d/ros-latest.list'`\n",
+    "    1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
+    "    1. `sudo apt-get update`\n",
+    "    1. `sudo apt-get install ros-kinetic-desktop-full`\n",
+    "    1. `sudo rosdep init`\n",
+    "    1. `rosdep update`\n",
+    "    1. `echo \"source /opt/ros/kinetic/setup.bash\" >> ~/.bashrc`\n",
+    "    1. `source ~/.bashrc`\n",
     "\t1. `sudo sh -c 'echo \"deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main\" > /etc/apt/sources.list.d/ros-latest.list'`\n",
     "\t1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
     "\t1. `wget http://packages.ros.org/ros.key -O - | sudo apt-key add - `\n",
     "\t1. `sudo apt-get update `\n",
-    "\t1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git`\n",
+    "\t1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs`\n",
     "\t1. `sudo mkdir /Firmware `\n",
     "\t1. `cd /Firmware`\n",
     "\t1. `sudo wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh `\n",
     "\t1. `sudo chmod +x install_geographiclib_datasets.sh `\n",
     "\t1. `sudo  ./install_geographiclib_datasets.sh `\n",
+    "1. Check hardware\n",
+    "    1. `roscore`\n",
+    "    1. `rosrun urg_node urg_node _ip_address:=192.168.0.10`\n",
     "1. Clone repos\n",
     "    1. Clone FlyingOctomap folder\n",
     "        1. `git clone https://github.com/margaridaCF/FlyingOctomap_code.git`\n",
@@ -1166,7 +1177,30 @@
     "    1. Clone Firmware folder\n",
     "        1. `sudo git clone https://github.com/PX4/Firmware.git`\n",
     "        1. `cd Firmware/`\n",
-    "        1. `git checkout v1.7.0-rc4`"
+    "        1. `git checkout v1.7.0-rc4`\n",
+    "\n",
+    "        1. `source /opt/ros/kinetic/setup.bash`\n",
+    "        1. `cd /ros_ws`\n",
+    "        2. `catkin init`\n",
+    "    1. `catkin build` \n",
+    "1. Build following [px4](https://dev.px4.io/en/simulation/ros_interface.html) instructions - keep terminal\n",
+    "    1. `cd /Firmware`\n",
+    "    1. `wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh`\n",
+    "    1. `chmod +x install_geographiclib_datasets.sh`\n",
+    "    1. `./install_geographiclib_datasets.sh `\n",
+    "    1. `make posix_sitl_default gazebo`\n",
+    "    1. Kill process (this was just for the make part, they apperantly complicated the toolchain at px4)\n",
+    "    1. `source /ros_ws/devel/setup.bash`\n",
+    "    1. `source Tools/setup_gazebo.bash /Firmware /Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:/Firmware/Tools/sitl_gazebo`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/Tools/iris_base.xacro /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp /ros_ws/src/architecture/launch/posix_sitl_urdf.launch /Firmware/launch/`\n",
+    "    1. `python /Firmware/Tools/sitl_gazebo/scripts/xacro.py -o /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "    1. Change the vertical angle of the rays in urdf `sed -i 's/_/_/g' /Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "    1. `roslaunch px4 posix_sitl_urdf.launch`"
    ]
   },
   {
